test/TestPhases/typechecker/valid/ignoreResult.blc
module

function calc() returns int64
    return 123
end

activity main ()()
    _ = calc()
    await false
end
