test/TestPhases/typechecker/invalid/ignoreResult.blc
module

function calc() returns int64
    return 123
end

activity main ()()
    calc()
    await false
end
